fix text shifting bug
The dragged image version is outside the main conatiner, so we need to
re-apply all container styles for image items. Very happy I am using
sass right now.

--- a/src/components/ImageContainer.scss
+++ b/src/components/ImageContainer.scss
@@ -6,6 +6,7 @@
 }
 
 .reactBasicTemplateEditor-ImageContainer-imageListItem {
+  @extend %base-container-styles;
   @include clearfix;
   background-color: rgba(150,150,150,0.5);
   padding: 10px;
